attempt to add color

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                  'experiment1_text': 'Don\'t press that button!',
                  'experiment1_button':
                        '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
+                    function changeBodyBg(color){
+                    document.body.style.background = color;
+                    }
              },
              {
                  name: 'variant2',
